# StarK-Lang

./: CMakeLists.txt  README.md
StarK-opt/: CMakeLists.txt  StarK-opt.cpp
include/: CMakeLists.txt
include/StarK/: CMakeLists.txt  ShapeInferenceOpInterface.hpp  ShapeInferenceOpInterface.td  StarKDialect.h  StarKDialect.td  StarKOps.h  StarKOps.td  StarKPasses.h  StarkOps.h
lib/: CMakeLists.txt  LowerToAffine.cpp  LowerToLLVM.cpp  ShapeInferenceOpInterface.cpp  StarKDialect.cpp  StarKOps.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/StarK/: main.mlir  print.mlir
